<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayoutBackground"
    >

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xxx_small"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/view_size_xxx_large"
        android:layout_height="@dimen/view_size_xxx_large"
        android:contentDescription="@string/logo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/llLoginForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icon"
        />

    <LinearLayout
        android:id="@+id/llLoginForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        >

        <EditText
            android:id="@+id/etLogin"
            style="@style/EditText"
            android:hint="@string/login"
            android:inputType="textAutoCorrect|textCapWords"
            />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditText"
            android:hint="@string/password"
            android:inputType="textPhonetic|textPassword"
            />

        <Button
            android:id="@+id/bSignIn"
            style="@style/SimpleAccentButton"
            android:layout_width="@dimen/view_size_xx_huge"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toTopOf="@+id/tvRegistration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/registration"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>