<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayoutBackground"
    >

    <TextView
        android:id="@+id/textView"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_x_large"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <EditText
            android:id="@+id/etLogin"
            style="@style/EditText"
            android:hint="@string/login"
            android:inputType="textAutoCorrect|textPersonName"
            />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditText"
            android:hint="@string/password"
            android:inputType="textPhonetic|textPassword"
            />

        <EditText
            android:id="@+id/etPasswordCheck"
            style="@style/EditText"
            android:hint="@string/password_check"
            android:inputType="textPhonetic|textPassword"
            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>