<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayoutBackground"
    android:gravity="center"
    android:orientation="vertical"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFirstName"
        style="@style/TextInputLayout"
        android:layout_width="@dimen/view_size_xx_huge"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietFirstName"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilLastName"
        style="@style/TextInputLayout"
        android:layout_width="@dimen/view_size_xx_huge"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietLastName"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilMiddleName"
        style="@style/TextInputLayout"
        android:layout_width="@dimen/view_size_xx_huge"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietMiddleName"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/middle_name"
            />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>