<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_xx_huge"
        android:background="@color/colorPlaceholder"
        app:expanded="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/crlProfileToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Some name"
            >

            <ImageView
                android:id="@+id/ivProfileToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srlProfileData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:padding="@dimen/font_size_xx_small"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/tvProfileName"
                    style="@style/HeaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <View style="@style/SpreadLine" />

                <LinearLayout
                    android:id="@+id/llProfileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <TextView
                        android:id="@+id/tvProfileEmailHint"
                        style="@style/HintText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        />

                    <TextView
                        android:id="@+id/tvProfileEmail"
                        style="@style/ItemText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llProfilePhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <TextView
                        android:id="@+id/tvProfilePhoneHint"
                        style="@style/HintText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        />

                    <TextView
                        android:id="@+id/tvProfilePhone"
                        style="@style/ItemText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvProfileBirthdayHint"
                    style="@style/HintText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    />

                <TextView
                    android:id="@+id/tvProfileBirthday"
                    style="@style/ItemText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <View
                    style="@style/SpreadLine"
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    />

                <LinearLayout
                    android:id="@+id/llProfileAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <TextView
                        android:id="@+id/tvProfileAboutHint"
                        style="@style/HintText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        />

                    <TextView
                        android:id="@+id/tvProfileAbout"
                        style="@style/ItemText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        />

                    <View style="@style/SpreadLine" />

                </LinearLayout>

                <Button
                    android:id="@+id/bProfileEdit"
                    style="@style/SimpleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    />

                <Button
                    android:id="@+id/bProfileSettings"
                    style="@style/SimpleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>