<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayoutBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:tag="fragment_registration_tab_1"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilRegistrationLogin"
        style="@style/TextInputLayout"
        android:layout_width="@dimen/view_size_xx_huge"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietRegistrationLogin"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="textAutoCorrect|textPersonName"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilRegistrationPassword"
        style="@style/TextInputLayout"
        android:layout_width="@dimen/view_size_xx_huge"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietRegistrationPassword"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPhonetic|textPassword"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilRegistrationPasswordCheck"
        style="@style/TextInputLayout"
        android:layout_width="@dimen/view_size_xx_huge"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietRegistrationPasswordCheck"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_check"
            android:inputType="textPhonetic|textPassword"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>